--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,9 +60,26 @@ h3 {
 
 
 img {
-    width: 400px;
+    width: 800px;
     height: 500px;
     padding: 70px;
+}
+
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 480px) {
+    body {
+        background-color: lightgreen;
+    }
+    
+    #leftsidebar {
+        width: 200px;
+        float: left;
+    }
+
+    #main {
+        margin-left: 216px;
+    }
 }
 
 
