--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,79 +6,88 @@ body {
     text-align: center;
 }
 
-#section {
-    height: 300px;
-    width: 400px;
-    color: #eaeaea;
+.header {
+    margin: 20px;
+    text-align: center;
+    padding: 20px;
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 2.5em;
 }
 
-h2 {
-    font-size: 30px;
+h4 {
+    font-size: 1.2em;
 }
 
-h3 {
-    font-size: 15px;
-    padding-top: 15px;
+
+/* TOP NAVIGATION BAR */
+.nav {
+    overflow: hidden;
+    background-color: #333;
 }
 
-#box1,
-#box2 {
-    padding-top: 15px;
-    width: auto;
-    margin-bottom: 20px;
+.nav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
     text-align: center;
-    border-radius: 10px;
-    line-height: 1.0;
-    word-spacing: 2px;
-    background-color: #eaeaea;
-    box-shadow: 3px 2px #000;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-#box1 {
-    height: 150px;
+.nav a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
-#box2 {
-    height: 70px;
+/* IMAGES */
+
+img {
+    width: 600px;
+    height: 400px;
+    padding: 10px;
+}
+
+#main {
+    margin-bottom: 20px;
+    height: 50px;
+    width: auto;
+    text-align: center;
+    padding: 20px;
+    color: #fff;
+    background-color: rgb(167, 25, 25);
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 #footer {
     margin: auto;
     height: 50px;
     width: auto;
-    text-align: left;
+    text-align: center;
     padding-top: 20px;
     padding-left: 20px;
     border-radius: 10px;
     color: #fff;
-    background-color: #000;
+    background-color: rgb(31, 16, 16);
 }
-
-
-img {
-    width: 800px;
-    height: 500px;
-    padding: 70px;
-}
-
 
 /* MEDIA QUERIES */
-@media screen and (min-width: 480px) {
-    body {
-        background-color: lightgreen;
-    }
-    
-    #leftsidebar {
-        width: 200px;
-        float: left;
-    }
-
-    #main {
-        margin-left: 216px;
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
     }
 }
 
