--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../images/creepy.jpg);
+    background-image: url(../img/.png);
     background-repeat: no-repeat;
     font-family: 'Open Sans Condensed', sans-serif;
     padding: 15px;
@@ -15,6 +15,7 @@ body {
 h1 {
     font-family: 'Grobold',sans-serif;
     font-size: 2.8em;
+    color: rgb(236, 35, 35);
 }
 
 h4 {
@@ -57,7 +58,7 @@ img {
     text-align: center;
     padding: 20px;
     color: #fff;
-    background-color: rgb(167, 25, 25);
+    background-color: rgb(236, 35, 35);
 }
 
 /* Create three equal columns that floats next to each other */
@@ -82,7 +83,7 @@ img {
     padding-left: 20px;
     border-radius: 10px;
     color: #fff;
-    background-color: rgb(31, 16, 16);
+    background-color: rgb(16, 16, 31);
 }
 
 /* MEDIA QUERIES */
