--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h4 {
 }
 
 
-/* TOP NAVIGATION BAR */
+/* NAVIGATION BAR */
 .nav {
     overflow: hidden;
     background-color: #333;
@@ -44,13 +44,13 @@ h4 {
 }
 
 /* IMAGES */
-
 img {
-    width: 600px;
+    width: 650px;
     height: 400px;
     padding: 10px;
 }
 
+/* IMAGE GALLERY */
 #main {
     margin-bottom: 20px;
     height: 500px;
@@ -61,19 +61,29 @@ img {
     background-color: rgb(236, 35, 35);
 }
 
-/* Create three equal columns that floats next to each other */
-.column {
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
     float: left;
-    width: 33.33%;
+    width: 180px;
 }
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+div.gallery:hover {
+    border: 3px solid rgb(29, 69, 199);
+    transition: all 0.4s ease;
 }
 
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+/* FOOTER */
 #footer {
     margin: auto;
     height: 50px;
