--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,13 @@ body {
 
 h1 {
     font-family: 'Grobold',sans-serif;
-    font-size: 2.8em;
+    font-size: 40px;
     color: rgb(236, 35, 35);
 }
 
 h4 {
-    font-size: 1.2em;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 
@@ -72,12 +73,12 @@ div.gallery {
 }
 
 div.gallery:hover {
-    border: 3px solid rgb(29, 69, 199);
+    border: 5px solid rgb(29, 69, 199);
     transition: all 0.4s ease;
 }
 
 div.gallery img {
-    width: 100%;
+    width: 85%;
     height: auto;
     background-color: #fff;
 }
@@ -85,6 +86,16 @@ div.gallery img {
 div.desc {
     padding: 15px;
     text-align: center;
+}
+
+#pic1, 
+#pic2, 
+#pic3, 
+#pic4, 
+#pic4, 
+#pic5, 
+#pic6 {
+    margin: auto;
 }
 
 /* FOOTER */
