--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,13 @@ body {
 }
 
 h1 {
-    font-family: 'Grobold',sans-serif;
+    font-family: 'Grobold', sans-serif;
     font-size: 40px;
     color: rgb(236, 35, 35);
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
 }
 
@@ -47,7 +47,7 @@ h4 {
     color: black;
 }
 
-/* IMAGES */
+/* HEADER IMAGE */
 img {
     width: 650px;
     height: 400px;
@@ -88,14 +88,109 @@ div.desc {
     text-align: center;
 }
 
-#pic1, 
-#pic2, 
-#pic3, 
-#pic4, 
-#pic4, 
-#pic5, 
+#pic1,
+#pic2,
+#pic3,
+#pic4,
+#pic4,
+#pic5,
 #pic6 {
     margin: auto;
+}
+
+/* CONTACT */
+* {
+    box-sizing: border-box;
+}
+
+.container {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1em;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.brand {
+    text-align: center;
+}
+
+.brand span {
+    color: #fff;
+}
+
+.wrapper {
+    box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+    margin: 20px;
+}
+
+.wrapper>* {
+    padding: 1em;
+}
+
+.company-info {
+    background: rgb(29, 69, 199);
+    color: #fff;
+}
+
+.company-info h3,
+.company-info ul {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+.contact {
+    background: #ffffff;
+    color: #000000;
+}
+
+.intro {
+    color: #000;
+}
+
+/* FORM STYLES */
+.contact form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    margin: 30px;
+}
+
+.contact form label {
+    display: block;
+}
+
+.contact form p {
+    margin: 0;
+}
+
+.contact form .full {
+    grid-column: 1 / 3;
+}
+
+.contact form button,
+.contact form input,
+.contact form textarea {
+    width: 100%;
+    padding: 1em;
+    border: 1px solid #00578a;
+}
+
+.contact form button {
+    background: rgb(29, 69, 199);
+    color: #fff;
+    border: 0;
+    text-transform: uppercase;
+}
+
+.contact form button:hover,
+.contact form button:focus {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    
 }
 
 /* FOOTER */
@@ -115,5 +210,3 @@ div.desc {
 @media screen and (max-width: 600px) {
 
 }
-
-
