--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,8 @@ h1 {
 h4 {
     font-size: 22px;
     font-weight: bold;
+    text-shadow: 1px 1px 1px #8d8686;
 }
-
 
 /* NAVIGATION BAR */
 .nav {
@@ -49,15 +49,15 @@ h4 {
 
 /* HEADER IMAGE */
 img {
-    width: 650px;
-    height: 400px;
-    padding: 10px;
+    width: 100%;
+    max-width: 650px;
+    height: auto;
 }
 
 /* IMAGE GALLERY */
 #main {
     margin-bottom: 20px;
-    height: 500px;
+    height: 450px;
     width: auto;
     text-align: center;
     padding: 20px;
@@ -75,6 +75,12 @@ div.gallery {
 div.gallery:hover {
     border: 5px solid rgb(29, 69, 199);
     transition: all 0.4s ease;
+}
+
+div.grow:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 div.gallery img {
@@ -207,6 +213,25 @@ ul {
 }
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 600px) {
-
+@media screen and (max-width: 830px) {
+    #main {
+        height: 500px;
+        width: auto;
+    }
 }
+
+@media screen and (max-width: 640px) {
+    #main {
+        height: 700px;
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    #main {
+        height: 1250px;
+        width: auto;
+    }
+}
+
+
